# Auto_media

./: .gitignore  README.md  pyproject.toml  pytest.ini  start.py
app/: main.py  quality_artifacts.json
backend/: README.md
docs/: DSPY_FEEDBACK_LOOP_INTEGRATION_PLAN.md  END_TO_END_CONSISTENCY_IMPLEMENTATION_PLAN.md  FIRST_LAST_FRAME_UPDATE_SUMMARY.md  I2V_VS_T2V_ANALYSIS.md  MAIN_FLOW_TRANSITION_INTEGRATION.md  SHOT_SPLITTING_ANALYSIS.md  aliyun-frp-public-access-plan.md  api-key-management.md  art-style-backend.md  automation-analysis.md  better.md  chain-video-generation.md  current-status-and-weekly-progress-2026-03-27.md  database-persistence-implementation.md  digital-asset-library-design.md  feature-documentation.md  full-video-export-guardrails-plan.md  mobile-app-analysis.md  outline-internal-concurrency.md  phase3-manual-acceptance-runbook.md  phase3_manual_acceptance_story.json  prompt-framework.md  transition-shots-design.md  video-pipeline.md
frontend/: README.md  index.html  package-lock.json  package.json  短剧生成.pages
tests/: test_character_design_prompt.py  test_character_prompts.py  test_character_router.py  test_config.py  test_doubao_video_provider.py  test_ffmpeg_service.py  test_image_reference_security.py  test_image_service_retry.py  test_llm_telemetry.py  test_pipeline_runtime.py  test_quality_runtime.py  test_scene_reference.py  test_scene_reference_lightweight.py  test_single_frame_mainline.py  test_start_script.py  test_story_context.py  test_story_identity.py  test_story_mainline.py  test_story_prompts.py  test_story_router.py  (+4 more)
(+110 files in other folders)
